--- a/less/util.less
+++ b/less/util.less
@@ -17,15 +17,15 @@
 //colors for various anchor link states that contain an svg
 .svglink(@color-link; @color-hover; @color-active; @color-visited; @important:false){
     & when (@important = true){
-        &:link use{color:@color-link !important;}
-        &:visited use{color:@color-visited !important;}
-        &:hover use{color:@color-hover !important;} 
-        &:active use{color:@color-active !important;} 
+        &:link use{color:@color-link !important; fill:@color-link !important;}
+        &:visited use{color:@color-visited !important; fill:@color-visited !important;}
+        &:hover use{color:@color-hover !important; fill:@color-hover !important;} 
+        &:active use{color:@color-active !important; fill:@color-active !important;} 
     } 
     & when (@important = false){
-        &:link use{color:@color-link;}
-        &:visited use{color:@color-visited;}
-        &:hover use{color:@color-hover;}
-        &:active use{color:@color-active;} 
+        &:link use{color:@color-link; fill:@color-link;}
+        &:visited use{color:@color-visited; fill:@color-visited;}
+        &:hover use{color:@color-hover; fill:@color-hover;}
+        &:active use{color:@color-active; fill:@color-active;} 
     }
 }
