--- a/tapestry.less
+++ b/tapestry.less
@@ -178,8 +178,8 @@ body {font-size:14px;}
     .row, .col{
         /* column styles */
         vertical-align:top;
-        label, input, a, span, p, h1, h2, h3, h4, h5, h6, blockquote, strong{ line-height:1; }
-        ul, li, table, tr, td ,thead, tbody, tfoot{line-height:0;}
+        label, input, a, span, p, h1, h2, h3, h4, h5, h6, blockquote, strong, td{ line-height:1; }
+        ul, table, tr ,thead, tbody, tfoot{line-height:0;}
         &.title{font-size:18px; white-space:nowrap;}
         &.sub-title{padding:5px 0 10px;}
         &.label{white-space:nowrap;  cursor:default;
@@ -211,12 +211,10 @@ body {font-size:14px;}
 
     //inner box
     .section{
-        height:100%;
-        border:1px solid transparent;
+        border:1px solid transparent; margin:20px 10px 0px 20px;
         &.shadow{
             box-shadow:1px 1px 2px 2px rgba(0,0,0,0.1);
         }
-        margin:20px;
     }
 
     /* fonts */
@@ -272,6 +270,11 @@ body {font-size:14px;}
     a.text{text-decoration:none;}
     a.text:hover{text-decoration:underline;}
 
+    /* data tables */
+    table.spreadsheet{border-spacing:0; width:100%;}
+    table.spreadsheet td{padding:10px 15px; cursor:default;}
+    table.spreadsheet thead td{padding:12px 15px;}
+
     /* menu system */
      ul.menu{list-style:none;}
      ul.menu > li{position:relative; width:100%;}
@@ -306,7 +309,7 @@ body {font-size:14px;}
      .expander.view{margin-left:0%;}
 
      /* messages */
-     .message{padding:7px 20px; margin:10px; border-radius:7px; overflow:hidden; box-sizing:border-box;}
+     .message{padding:7px 20px; margin:10px 0; border-radius:7px; overflow:hidden; box-sizing:border-box; line-height:1; width:100%;}
 
 
     /* small tag */
@@ -370,7 +373,7 @@ body {font-size:14px;}
                 svg{width:25px; height:25px;}
             }
 
-            input, textarea, select{font-size:12px; padding:5px 4px;}
+            input:not([type=button]):not([type=submit]), textarea, select{font-size:12px; padding:5px 4px;}
             input[type="checkbox"]{margin:2px 5px 0 0}
             input.short, select.short{width:100px;}
             input.tiny, select.tiny{width:50px;}
@@ -417,7 +420,7 @@ body {font-size:14px;}
             &.field-input{padding:3px 7px 3px 0px; 
                 &.expand{width:~"calc(100% - 100px)";}
             }
-            &.field-text{padding:8px 7px 7px 4px; margin-top:1px;}
+            &.field-text{padding:8px 7px 7px 4px; margin-top:4px;}
             &.field-icon{margin-top:3px;}
             &.buttons{
                 .button{margin-left:10px;}
@@ -428,7 +431,7 @@ body {font-size:14px;}
                 svg{width:36px; height:36px;}
             }
 
-            input, textarea, select{font-size:14px; padding:8px 8px;}
+            input:not([type=button]):not([type=submit]), textarea, select{font-size:14px; padding:7px 8px 6px 8px;}
             input[type="checkbox"]{margin:2px 6px 0 0}
             input.short, select.short{width:120px;}
             input.tiny, select.tiny{width:65px;}
@@ -475,7 +478,7 @@ body {font-size:14px;}
             &.field-input{padding:3px 7px 3px 0px; 
                 &.expand{width:~"calc(100% - 130px)";}
             }
-            &.field-text{padding:8px 7px 7px 4px; margin-top:1px;}
+            &.field-text{padding:8px 7px 7px 4px; margin-top:7px;}
             &.field-icon{margin-top:8px;}
             &.buttons{
                 .button{margin-left:10px; padding:12px 16px; font-size:19px;}
@@ -488,7 +491,7 @@ body {font-size:14px;}
                 svg{width:48px; height:48px;}
             }
 
-            input, textarea, select{font-size:17px; padding:10px 12px;}
+            input:not([type=button]):not([type=submit]), textarea, select{font-size:17px; padding:10px 12px;}
             input[type="checkbox"]{margin:3px 7px 0 0}
             input.short, select.short{width:150px;}
             input.tiny, select.tiny{width:75px;}
